# test1

untitled/: CMakeLists.txt
untitled/Bridge/: bridge2.cpp
untitled/Factory-Pattern/: CMakeLists.txt  NYPizzaStore.hpp  Pizza.hpp  main.cpp
untitled/Observer/: CMakeLists.txt
untitled/Observer-Pattern/: main.cpp
untitled/Strategy-Pattern/: CMakeLists.txt  Makefile  main
untitled/Template-Method/: CMakeLists.txt  template1  template2
untitled/Template-Pattern/: CMakeLists.txt  CaffeineBeverage.hpp
untitled1/: CMakeLists.txt
untitled1/Strategy-pattern/: CMakeCache.txt  CMakeLists.txt  DecoyDuck.cpp  DecoyDuck.h  Duck.h  FlyBehavior.h  FlyNoWay.h  FlyWithwings.h  Makefile  MallardDuck.cpp  MallardDuck.h  MuteQuack.h  Quack.h  QuackBehavior.h  RedHeadDuck.cpp  RedHeadDuck.h  RubberDuck.cpp  RubberDuck.h  Squeak.h  cmake_install.cmake  main  main.cpp
