cmake_minimum_required(VERSION 3.19)
project(Factory-Pattern)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_STANDARD 11)

#add_subdirectory(Template-Method)
#add_subdirectory(Template-Pattern)
#add_subdirectory(Observer-Pattern)
#add_subdirectory(Strategy-Pattern)
add_subdirectory(Factory-Pattern)


#add_executable(untitled main.cpp)
